# pebble-ukrainian-text-watchface

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appinfo.json
src/: main.c  main.h  text_formal.c  text_formal.h
